<resources>
    <!--  TODO: Organize these by fragment  -->
    <string name="app_name">Thessaloniki Transport</string>
    <string name="welcomeTitle">Welcome to OASTH Bus</string>
    <string name="waitConfigure">Please wait while we configure the app</string>
    <string name="getStarted">Get Started</string>
    <string name="lines">Lines</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="stopWithPlaceholder">Stop: %1$s</string>
    <string name="stop">Home</string>
    <string name="towards_with_placeholder">Towards: %1$s</string>

    <string name="stops_tab">Stops</string>
    <string name="map_tab">Map</string>
    <string name="schedule_tab">Schedule</string>

    <string name="search_hint">Search lines and stops</string>

    <string name="preferenceFileName" translatable="false">xyz.teogramm.thessalonikitransport.prefs</string>
    <string name="preferenceDbInitializedKey" translatable="false">dbinit</string>
    <string name="notificationMinutesPrompt">Notification Minutes</string>
    <string name="selectRoutesPrompt">Select routes to monitor</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="addNotifiaction">Add Notification</string>
    <string name="liveArrivalsNotificationChannelName">Bus Arrival Notifications</string>
    <string name="persistentNotificationChannelName">Persistent Indicator</string>
    <string name="persistentNotificationNoData">No arrivals at the selected stops</string>
    <string name="busArrivingDetails">%1$s arriving in %2$d at %3$s</string>
    <string name="persistentNotificationInit">Initialising</string>
    <string name="errorFetchingData">Error while fetching data from the internet.</string>
    <string name="notificationArrivalTitle">Bus Arriving</string>
    <string name="persistentNotificationCloseButtonLabel">Stop</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
</resources>
